--- a/Index.html
+++ b/Index.html
@@ -110,7 +110,7 @@ div:hover {
 
 
   <div class="formulario"  id="myDIV">
-    <form action="/action_page.php" style="max-width:500px;margin:auto">
+    <form action="Index.html" style="max-width:500px;margin:auto">
         <h2>Registrate ahora</h2>
         <p>Disfruta del momento</p>
        
